fdo#45254 getTablePrivileges: rely on information_schema

This avoids the use of aclexplode(), which is only SQL-available in PostgreSQL 9.0 and later.
With PostgreSQL versions known to have the information_schema.table_privileges bug of not filling in the default ACL in the absence of an ACL, fill in "owner has all rights", which is the default state of the default ACL.
(cherry picked from commit 8c922d832792402554cc3dfd174d6d4da50847f4)

Signed-off-by: Michael Stahl <mstahl@redhat.com>